SeminarCD_TVB/infra/k8s/overlays/staging/payment-return-url.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  template:
    spec:
      containers:
        - name: payment-service
